cluster/apps/monitoring/uptime-kuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: monitoring
  labels:
    k8s-app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uptime-kuma
  template:
    metadata:
      labels:
        k8s-app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1.10.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: task-pv-storage
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
